tests/compile-fail/stack_empty_parens.stderr
error: #[stack()] requires arguments, e.g., #[stack(location)]
 --> tests/compile-fail/stack_empty_parens.rs:7:5
  |
7 |     #[stack()]
  |     ^
